--- a/Den2908/styles.css
+++ b/Den2908/styles.css
@@ -1,4 +1,6 @@
 @import url(https://fonts.googleapis.com/css?family=Indie+Flower);
+@import url(https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css);
+@import url(https://daneden.github.io/animate.css/animate.min.css);
 
 * {
 	padding: 0;
